--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 NEXTAUTH_SECRET=secret
-WALLET_CONNECT_PROJECT_ID=
+WALLET_CONNECT_PROJECT_ID=905df8730d0491164cf49aabe126314b
+BASE_URL_API="https://matrixapi.frackment.id"
